integrate audio without sync video

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 # Core dependencies
 
 # Deep Learning Framework (CUDA 12.1 compatible versions)
-torch==2.1.0+cu121
-torchvision==0.16.0+cu121
-torchaudio==2.1.0+cu121
+# torch==2.1.0+cu121
+# torchvision==0.16.0+cu121
+# torchaudio==2.1.0+cu121
 
 # Computer Vision (compatible versions)
 opencv-python<4.10
