--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ gfpgan>=1.3.8
 kornia>=0.6.0
 lpips>=0.1.4
 
+# GUI Dependencies
+tkinter  # Usually included with Python, but listed for completeness
+psutil
 # Development and testing (optional)
 # pytest>=7.0.0
 # pytest-cov>=4.0.0
